refactor(auth): 重构认证模块
- 新增 AuthCheckPermissionDto 类用于检查权限
- 重命名 AuthLoginController 为 AuthenticationController
- 新增 AuthenticationService 服务类
- 更新 AuthUserIntegratedInfoDto 类，使用 btnPermissions 替代 permissions
- 更新 RedisCacheKey 类，将 permissionRole 方法改为获取用户所拥有的角色
- 更新 SaTokenConfigure 类，修改拦截路径- 更新 SerialController 类，修改路由前缀
- 优化 StpInterfaceImpl 类中的代码